--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.71.4",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
