--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "sass-loader": "^6.0.6",
-    "semantic-ui": "^2.2.10",
+    "semantic-ui-react": "^2.2.10",
     "style-loader": "^0.18.2"
   }
 }
