--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "axios": "^0.16.2",
     "node-sass": "^4.5.3",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
